--- a/404.html
+++ b/404.html
@@ -14,8 +14,8 @@
 <img src="/404.gif" width="500" height="350"/>
 <p class="STYLE1">很抱歉，您要访问的页面不存在。</p>
 <h2 class="STYLE2">1、请检查您输入的地址是否正确。 </h2>
-<p class="STYLE2">2、通过<a  href="http://www.bluelian.com">返回首页</a>进行浏览。</p>
-<p class="STYLE2">3、感谢您使用本站，如有疑问请<a  href="http://www.bluelian.com">联系我们</a>。</p>
+<p class="STYLE2">2、通过<a  href="{:U('Index/index')}">返回首页</a>进行浏览。</p>
+<p class="STYLE2">3、感谢您使用本站，如有疑问请<a  href="{:U('Index/index')}">联系我们</a>。</p>
 <style type="text/css">
     <!--
     .STYLE1{
